--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,5 +29,5 @@ jobs:
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-        run: ./gradlew publishPlugins
+        run: ./gradlew --info publishPlugins
         if: startsWith(github.ref, 'refs/tags/')
