--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,12 +22,9 @@ jobs:
         with:
           java-version: 1.8
 
-      #- name: Build with Gradle
-      #  run: ./gradlew assemble check --project-cache-dir=../cache --stacktrace
+      - name: Build with Gradle
+        run: ./gradlew assemble check --project-cache-dir=../cache --stacktrace
 
       - name: Upload tag
-        env:
-          GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
-          GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-        run: ./gradlew --info assemble publishPlugins
+        run: ./gradlew publishPlugins --project-cache-dir=../cache -Pgradle.publish.key="${{ secrets.GRADLE_PUBLISH_KEY }}" -Pgradle.publish.secret="${{ secrets.GRADLE_PUBLISH_SECRET }}"
         #if: startsWith(github.ref, 'refs/tags/')
