--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,16 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew assemble check --project-cache-dir=../cache --stacktrace
 
+      - name: Configure credentials
+        run: |
+          mkdir -p $HOME/.gradle
+          touch $HOME/.gradle/gradle.properties
+          chmod 0600 $HOME/.gradle/gradle.properties
+          printf -- "---\ngradle.publish.key=${GRADLE_PUBLISH_KEY}\ngradle.publish.secret=${GRADLE_PUBLISH_SECRET}" > $HOME/.gradle/gradle.properties
+        env:
+          GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
+          GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
+
       - name: Upload tag
-        run: ./gradlew publishPlugins --project-cache-dir=../cache -Pgradle.publish.key="${{ secrets.GRADLE_PUBLISH_KEY }}" -Pgradle.publish.secret="${{ secrets.GRADLE_PUBLISH_SECRET }}"
+        run: ./gradlew publishPlugins --project-cache-dir=../cache
         #if: startsWith(github.ref, 'refs/tags/')
