--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,5 +28,5 @@ jobs:
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-        run: ./gradlew publishPlugins --project-cache-dir=../cache
+        run: ./gradlew publishPlugins --debug --project-cache-dir=../cache
         #if: startsWith(github.ref, 'refs/tags/')
